[tool.poetry]
name = "jackpy"
version = "0.1.0"
description = "Jack polynomials."
homepage = "https://github.com/stla/jackpy"
authors = ["Stéphane Laurent <laurent_step@outlook.fr>"]
documentation = "https://jackpy.readthedocs.io/en/latest/"
keywords = ["Jack polynomials", "Schur polynomials", "zonal polynomials", "multivariate polynomials", "symmetric polynomials"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
numpy = "^1.21.2"
sympy = "^1.9"
gmpy2 = "^2.0"
sphinx = { version = "^5.3.0", optional = true }
sphinx-rtd-theme = { version = "^1.1.1", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
sphinxcontrib-restbuilder = { version = "^0.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinxcontrib-restbuilder"]

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
