[tool.poetry]
name = "jackpolynomials"
packages = [
    { include = "jackpy" },
]
version = "0.1.0.9000"
description = "Jack polynomials."
homepage = "https://github.com/stla/jackpy"
authors = ["Stéphane Laurent <laurent_step@outlook.fr>"]
documentation = "https://jackpy.readthedocs.io/en/latest/"
keywords = ["Jack polynomials", "Schur polynomials", "zonal polynomials", "multivariate polynomials", "symmetric polynomials"]
license = "GPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26"
sympy = "^1.12"
gmpy2 = "^2.1"
sphinx = { version = "^7.2.0", optional = true }
sphinx-rtd-theme = { version = "^1.3.0", optional = true }
sphinxcontrib-napoleon = { version = "^0.7", optional = true }
sphinxcontrib-restbuilder = { version = "^0.3", optional = true }

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon", "sphinxcontrib-restbuilder"]

[tool.poetry.dev-dependencies]
pytest = "^8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
